[gd_scene load_steps=8 format=3 uid="uid://js1il6tyy8it"]

[ext_resource type="PackedScene" uid="uid://cbs7jvwr28tsy" path="res://Map.tscn" id="1_gudly"]
[ext_resource type="Script" path="res://Game.gd" id="1_l61x1"]
[ext_resource type="PackedScene" uid="uid://dp2rty8t2fngy" path="res://Character.tscn" id="2_vbn45"]
[ext_resource type="Theme" uid="uid://ddgo057dc411p" path="res://Theme.tres" id="3_rj6nc"]
[ext_resource type="PackedScene" uid="uid://f7ux4ucjdtx3" path="res://Enemy.tscn" id="4_5pgag"]
[ext_resource type="PackedScene" uid="uid://4mfbfwmnbq5e" path="res://Item.tscn" id="5_phxvh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j0txq"]

[node name="Game" type="Node2D"]
script = ExtResource("1_l61x1")

[node name="Map" parent="." instance=ExtResource("1_gudly")]

[node name="Interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("3_rj6nc")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Interface"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 96.0
offset_bottom = 25.0
text = "          offset title screen of beginnings"

[node name="VBox" type="VBoxContainer" parent="Interface"]
layout_mode = 0
offset_right = 480.0
offset_bottom = 288.0

[node name="Spacer" type="Control" parent="Interface/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="Interface/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MessageScroll" type="ScrollContainer" parent="Interface/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme = ExtResource("3_rj6nc")
theme_override_styles/panel = SubResource("StyleBoxEmpty_j0txq")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Messages" type="VBoxContainer" parent="Interface/VBox/HBox/MessageScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="HBox" type="HBoxContainer" parent="Interface/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxState" type="VBoxContainer" parent="Interface/VBox/HBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="name" type="Label" parent="Interface/VBox/HBox/HBox/VBoxState"]
layout_mode = 2

[node name="hp" type="Label" parent="Interface/VBox/HBox/HBox/VBoxState"]
layout_mode = 2

[node name="attack" type="Label" parent="Interface/VBox/HBox/HBox/VBoxState"]
layout_mode = 2

[node name="VBoxNames" type="VBoxContainer" parent="Interface/VBox/HBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Interface/VBox/HBox/HBox/VBoxNames"]
layout_mode = 2
text = "name"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="Interface/VBox/HBox/HBox/VBoxNames"]
layout_mode = 2
text = "health"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="Interface/VBox/HBox/HBox/VBoxNames"]
layout_mode = 2
text = "attack"
horizontal_alignment = 2

[node name="Entities" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Items" type="Control" parent="Entities"]
unique_name_in_owner = true
anchors_preset = 0

[node name="Item" parent="Entities/Items" instance=ExtResource("5_phxvh")]
offset_left = 33.0
offset_top = 15.0
offset_right = 33.0
offset_bottom = 15.0

[node name="Enemies" type="Control" parent="Entities"]
unique_name_in_owner = true
anchors_preset = 0

[node name="Enemy" parent="Entities/Enemies" instance=ExtResource("4_5pgag")]
offset_left = 63.0
offset_top = 15.0
offset_right = 63.0
offset_bottom = 15.0

[node name="Character" parent="Entities" instance=ExtResource("2_vbn45")]
unique_name_in_owner = true
offset_left = 15.0
offset_top = 15.0
offset_right = 15.0
offset_bottom = 15.0

[connection signal="attempt_action_at" from="Entities/Character" to="." method="_on_character_attempt_action_at"]
[connection signal="attempt_move_to" from="Entities/Character" to="." method="_on_character_attempt_move_to"]
